--- a/index.html
+++ b/index.html
@@ -12,14 +12,17 @@
 </head>
 
 <body>
+    <header>EzVibez</header>
+    <div class ='container input-group'>
     <div class="input-group input-group-rounded">
         <input class="input-group-field" type="search">
         <div class="input-group-button">
           <input type="submit" class="button secondary" value="Search">
         </div>
       </div>
-    <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js"
-        integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o=" crossorigin="anonymous"></script>
+    </div>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js" -->
+        <!-- integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o=" crossorigin="anonymous"></script> -->
     <script src="./assets/js/script.js"></script>
 </body>
 
