added descrip plus styling

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
 <body>
     <header>EzVibez</header>
-    <div class ='container input-group'>
+    <article>Welcome to EzVibez! Have you ever been curious about your favoite songs true mood and feel? blurb</article>
+    <div id ='container' class ='grid-x grid-padding-x'>
     <div class="input-group input-group-rounded">
         <input class="input-group-field" type="search">
         <div class="input-group-button">
