--- a/index.html
+++ b/index.html
@@ -14,14 +14,40 @@
 <body>
     <header>EzVibez</header>
     <article>Welcome to EzVibez! Have you ever been curious about your favoite songs true mood and feel? blurb</article>
-    <div id ='container' class ='grid-x grid-padding-x'>
+
+    <div class="top-bar">
+        <div class="top-bar-left">
+          <ul class="dropdown menu" data-dropdown-menu>
+            <li class="menu-text">Site Title</li>
+            <li>
+              <a href="#">One</a>
+              <ul class="menu vertical">
+                <li><a href="#">One</a></li>
+                <li><a href="#">Two</a></li>
+                <li><a href="#">Three</a></li>
+              </ul>
+            </li>
+            <li><a href="#">Two</a></li>
+            <li><a href="#">Three</a></li>
+          </ul>
+        </div>
+        <div class="top-bar-right">
+          <ul class="menu">
+            <li><input type="search" placeholder="Search"></li>
+            <li><button type="button" class="button">Search</button></li>
+          </ul>
+        </div>
+      </div>
+
+
+    <!-- <div id ='container' class ='grid-x grid-padding-x'>
     <div class="input-group input-group-rounded">
         <input class="input-group-field" type="search">
         <div class="input-group-button">
           <input type="submit" class="button secondary" value="Search">
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js" -->
         <!-- integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o=" crossorigin="anonymous"></script> -->
     <script src="./assets/js/script.js"></script>
