ntoes for particle js

--- a/index.html
+++ b/index.html
@@ -12,23 +12,11 @@
 </head>
 
 <body>
-    <header>EzVibez</header>
-    <article>Welcome to EzVibez! Have you ever been curious about your favoite songs true mood and feel? blurb</article>
-
     <div class="top-bar">
         <div class="top-bar-left">
           <ul class="dropdown menu" data-dropdown-menu>
-            <li class="menu-text">Site Title</li>
+            <li class="menu-text">EzVibez</li>
             <li>
-              <a href="#">One</a>
-              <ul class="menu vertical">
-                <li><a href="#">One</a></li>
-                <li><a href="#">Two</a></li>
-                <li><a href="#">Three</a></li>
-              </ul>
-            </li>
-            <li><a href="#">Two</a></li>
-            <li><a href="#">Three</a></li>
           </ul>
         </div>
         <div class="top-bar-right">
@@ -36,6 +24,16 @@
             <li><input type="search" placeholder="Search"></li>
             <li><button type="button" class="button">Search</button></li>
           </ul>
+          <div class="card" style="width: 300px;">
+            <div class="card-divider">
+              This is a header
+            </div>
+            <img src="assets/img/generic/rectangle-1.jpg">
+            <div class="card-section">
+              <h4>Welcome!</h4>
+              <p>Welcome to EzVibez! Have you ever been curious about your favoite songs true mood and feel? blurb</p>
+            </div>
+          </div>
         </div>
       </div>
 
