edited old front end

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class="top-bar-left">
           <ul class="dropdown menu" data-dropdown-menu>
             <li class="menu-text">EzVibez</li>
+            <!-- add aprticles Js -->
             <li>
           </ul>
         </div>
@@ -28,14 +29,18 @@
             <div class="card-divider">
               This is a header
             </div>
-            <img src="assets/img/generic/rectangle-1.jpg">
+            
+          </div>
+        </div>
+      </div>
+      <img src="https://i.picsum.photos/id/187/200/200.jpg?hmac=b_8v5WKwO-_jC2FqfZOP_n9niD1jQvZHB31GoegK2Ww">
             <div class="card-section">
               <h4>Welcome!</h4>
               <p>Welcome to EzVibez! Have you ever been curious about your favoite songs true mood and feel? blurb</p>
             </div>
-          </div>
-        </div>
-      </div>
+    <section>
+        <ul class=""><button class</ul>
+    </section>
 
 
     <!-- <div id ='container' class ='grid-x grid-padding-x'>
