almost finished layout

--- a/index.html
+++ b/index.html
@@ -13,22 +13,20 @@
     <div class="top-bar">
       <div class="top-bar-left">
         <ul class="menu">
-          <li class="menu-text">EzVibez</li>
+          <li class="menu-text">EzVibez</li> <!--LOGO-->
         </ul>
-      </div>
-      <div class="top-bar-right">
       </div>
     </div>
     <!-- End Top Bar -->
 
     <div class="callout large">
       <div class="row column text-center">
-        <h1>Changing the World Through Design</h1>
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris.</p>
+        <h1>EzVibez</h1> <!--LOGO-->
+        <p class="lead">Search for a song to get its lyrics and mood</p>
         <div class="input-group input-group-rounded">
             <input class="input-group-field" type="search">
             <div class="input-group-button">
-              <input type="submit" class="button secondary" value="Search">
+                <input type="submit" class="button secondary" value="Search">
             </div>
           </div>          
       </div>
@@ -37,21 +35,15 @@
     <div class="row">
       <div class="medium-4 columns medium-pull-6">
         <h2>Lyrics</h2>
-        <p>Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam porttitor mauris, quis sollicitudin sapien justo in libero. Vestibulum mollis mauris enim. Morbi euismod magna ac lorem rutrum elementum. Donec viverra auctor.</p>
+        <p id="lyrics">Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam porttitor mauris, quis sollicitudin sapien justo in libero. Vestibulum mollis mauris enim. Morbi euismod magna ac lorem rutrum elementum. Donec viverra auctor.</p>
       </div>
     </div>
-
-
 
     <hr>
 
     <div class="row column">
       <ul class="vertical medium-horizontal menu expanded text-center">
-        <li><a href="#"><div class="stat">28</div><span>Websites</span></a></li>
-        <li><a href="#"><div class="stat">43</div><span>Apps</span></a></li>
-        <li><a href="#"><div class="stat">95</div><span>Ads</span></a></li>
-        <li><a href="#"><div class="stat">59</div><span>Cakes</span></a></li>
-        <li><a href="#"><div class="stat">18</div><span>Logos</span></a></li>
+        <li><div class="stat mood">The mood for this song is: </div><span id="mood">Happy</span></li>
       </ul>
     </div>
 
@@ -61,19 +53,7 @@
       <h3>Recommendations</h3>
     </div>
 
-    <div class="row medium-up-3 large-up-4">
-      <div class="column">
-        <img class="thumbnail" src="https://placehold.it/550x550">
-      </div>
-      <div class="column">
-        <img class="thumbnail" src="https://placehold.it/550x550">
-      </div>
-      <div class="column">
-        <img class="thumbnail" src="https://placehold.it/550x550">
-      </div>
-      <div class="column">
-        <img class="thumbnail" src="https://placehold.it/550x550">
-      </div>
+    <div class="row medium-up-3 large-up-4" id="recs">
       <div class="column">
         <img class="thumbnail" src="https://placehold.it/550x550">
       </div>
