more additions to html

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <h3>Recommendations</h3>
     </div>
 
-    <div class="row medium-up-3 large-up-4" id="recs">
+    <div class="row medium-up-3 large-up-4" id="recs"> <!--8 recommendations add this dynamically in js-->
       <div class="column">
         <img class="thumbnail" src="https://placehold.it/550x550">
       </div>
@@ -81,6 +81,12 @@
     </div>
 
     <hr>
+
+    <footer class="responsive-blog-footer">
+        <div class="row columns flex-container align-justify">
+           <p>Team 5 | Berkeley Coding Bootcamp</p>
+        </div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
