--- a/index.html
+++ b/index.html
@@ -35,9 +35,15 @@
       </div>
       <img src="https://i.picsum.photos/id/187/200/200.jpg?hmac=b_8v5WKwO-_jC2FqfZOP_n9niD1jQvZHB31GoegK2Ww">
             <div class="card-section">
+              <div id="particles-js"></div>
+
+<!-- stats - count particles -->
+<div class="count-particles">
+  <span class="js-count-particles">--</span> particles
               <h4>Welcome!</h4>
               <p>Welcome to EzVibez! Have you ever been curious about your favoite songs true mood and feel? blurb</p>
             </div>
+          </div>
     <section>
         <ul class=""><button class</ul>
     </section>
@@ -54,6 +60,7 @@
     <!-- <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js" -->
         <!-- integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o=" crossorigin="anonymous"></script> -->
     <script src="./assets/js/script.js"></script>
+    <script serc='./particles.js'></script>
 </body>
 
 </html>
