--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
             </div>
           </div>
     <section>
-        <ul class=""><button class</ul>
     </section>
 
 
@@ -60,7 +59,8 @@
     <!-- <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js" -->
         <!-- integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o=" crossorigin="anonymous"></script> -->
     <script src="./assets/js/script.js"></script>
-    <script serc='./particles.js'></script>
+    <script type='text/javascript' src='./assets/js/particles.js'></script>
+    <script type='text/javascript' src='./assets/js/app.js'></script>
 </body>
 
 </html>
