--- a/index.html
+++ b/index.html
@@ -1,66 +1,98 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html class="no-js" lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>EzVibez | Find lyrics, mood, and recommendations</title>
+    <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
+    <link rel="stylesheet" href="./assets/style.css">
+  </head>
+  <body>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css"
-        integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>EzVibez</title>
-</head>
-
-<body>
+    <!-- Start Top Bar -->
     <div class="top-bar">
-        <div class="top-bar-left">
-          <ul class="dropdown menu" data-dropdown-menu>
-            <li class="menu-text">EzVibez</li>
-            <!-- add aprticles Js -->
-            <li>
-          </ul>
-        </div>
-        <div class="top-bar-right">
-          <ul class="menu">
-            <li><input type="search" placeholder="Search"></li>
-            <li><button type="button" class="button">Search</button></li>
-          </ul>
-          <div class="card" style="width: 300px;">
-            <div class="card-divider">
-              This is a header
-            </div>
-            
-          </div>
-        </div>
+      <div class="top-bar-left">
+        <ul class="menu">
+          <li class="menu-text">EzVibez</li> <!--LOGO-->
+        </ul>
       </div>
-      <img src="https://i.picsum.photos/id/187/200/200.jpg?hmac=b_8v5WKwO-_jC2FqfZOP_n9niD1jQvZHB31GoegK2Ww">
-            <div class="card-section">
-              <div id="particles-js"></div>
+    </div>
+    <!-- End Top Bar -->
 
-<!-- stats - count particles -->
-<div class="count-particles">
-  <span class="js-count-particles">--</span> particles
-              <h4>Welcome!</h4>
-              <p>Welcome to EzVibez! Have you ever been curious about your favoite songs true mood and feel? blurb</p>
+    <div class="callout large">
+      <div class="row column text-center">
+        <h1>EzVibez</h1> <!--LOGO-->
+        <p class="lead">Search for a song to get its lyrics and mood</p>
+        <div class="input-group input-group-rounded">
+            <input class="input-group-field" type="search">
+            <div class="input-group-button">
+                <input type="submit" class="button secondary" value="Search">
             </div>
-          </div>
-    <section>
-    </section>
-
-
-    <!-- <div id ='container' class ='grid-x grid-padding-x'>
-    <div class="input-group input-group-rounded">
-        <input class="input-group-field" type="search">
-        <div class="input-group-button">
-          <input type="submit" class="button secondary" value="Search">
-        </div>
+          </div>          
       </div>
-    </div> -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js" -->
-        <!-- integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o=" crossorigin="anonymous"></script> -->
-    <script src="./assets/js/script.js"></script>
-    <script type='text/javascript' src='./assets/js/particles.js'></script>
-    <script type='text/javascript' src='./assets/js/app.js'></script>
-</body>
+    </div>
 
+    <div class="row">
+      <div class="medium-4 columns medium-pull-6">
+        <h2>Lyrics</h2>
+        <p id="lyrics">Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam porttitor mauris, quis sollicitudin sapien justo in libero. Vestibulum mollis mauris enim. Morbi euismod magna ac lorem rutrum elementum. Donec viverra auctor.</p>
+      </div>
+    </div>
+
+    <hr>
+
+    <div class="row column">
+      <ul class="vertical medium-horizontal menu expanded text-center">
+        <li><div class="stat mood">The mood for this song is: </div><span id="mood">Happy</span></li>
+      </ul>
+    </div>
+
+    <hr>
+
+    <div class="row column">
+      <h3>Recommendations</h3>
+    </div>
+
+    <div class="row medium-up-3 large-up-4" id="recs"> <!--8 recommendations add this dynamically in js-->
+      <div class="column">
+        <img class="thumbnail" src="https://placehold.it/550x550">
+      </div>
+      <div class="column">
+        <img class="thumbnail" src="https://placehold.it/550x550">
+      </div>
+      <div class="column">
+        <img class="thumbnail" src="https://placehold.it/550x550">
+      </div>
+      <div class="column">
+        <img class="thumbnail" src="https://placehold.it/550x550">
+      </div>
+      <div class="column">
+        <img class="thumbnail" src="https://placehold.it/550x550">
+      </div>
+      <div class="column">
+        <img class="thumbnail" src="https://placehold.it/550x550">
+      </div>
+      <div class="column">
+        <img class="thumbnail" src="https://placehold.it/550x550">
+      </div>
+      <div class="column">
+        <img class="thumbnail" src="https://placehold.it/550x550">
+      </div>
+    </div>
+
+    <hr>
+
+    <footer class="responsive-blog-footer">
+        <div class="row columns flex-container align-justify">
+           <p>Team 5 | Berkeley Coding Bootcamp</p>
+        </div>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
+    <script>
+      $(document).foundation();
+    </script>
+    <script src = ./assets/script.js></script>
+  </body>
 </html>
