Added script to html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <!-- Start Top Bar -->
     <div class="top-bar">
+      <div class = 'particles-js'></div>
       <div class="top-bar-left">
         <ul class="menu">
           <li class="menu-text">EzVibez</li> <!--LOGO-->
@@ -94,5 +95,7 @@
       $(document).foundation();
     </script>
     <script src = ./assets/script.js></script>
+    <script type = 'text/javascript' src = .assets/js/particles.js></script>
+    <script type = 'text/javascript' src = .assets/js/app.js></script>
   </body>
 </html>
