--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
 
     <!-- Start Top Bar -->
     <div class="top-bar">
-      <div class = 'particles-js'></div>
+      
       <div class="top-bar-left">
         <ul class="menu">
           <li class="menu-text">EzVibez</li> <!--LOGO-->
         </ul>
       </div>
+      </div>
     </div>
+    <div class = 'particles-js flex-container'>Text</div>
     <!-- End Top Bar -->
 
     <div class="callout large">
@@ -95,7 +97,7 @@
       $(document).foundation();
     </script>
     <script src = ./assets/script.js></script>
-    <script type = 'text/javascript' src = .assets/js/particles.js></script>
-    <script type = 'text/javascript' src = .assets/js/app.js></script>
+    <script type = 'text/javascript' src = ./assets/js/particles.js></script>
+    <script type = 'text/javascript' src = ./assets/js/app.js></script>
   </body>
 </html>
