--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
       </div>
     </div>
-    <div class = 'particles-js flex-container'>Text</div>
+    <div class = 'particles-js'>Text</div>
     <!-- End Top Bar -->
 
     <div class="callout large">
@@ -96,8 +96,8 @@
     <script>
       $(document).foundation();
     </script>
-    <script src = ./assets/script.js></script>
     <script type = 'text/javascript' src = ./assets/js/particles.js></script>
     <script type = 'text/javascript' src = ./assets/js/app.js></script>
+    <script src = ./assets/script.js></script>
   </body>
 </html>
