particle logic fail

--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>EzVibez | Find lyrics, mood, and recommendations</title>
-  <!-- <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css"> -->
+  <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
   <link rel="stylesheet" href="./assets/css/style.css">
-  <script src  ='./assets/js/particles.js'></script>
 </head>
 
 <body>
-  <div class='particles-js'></div>
+  <div id='particles-js'>
   <!-- Start Top Bar -->
   <h3>EzVibez</h3>
   <!-- End Top Bar -->
@@ -86,17 +85,18 @@
   </div>
 
   <hr>
+  </div>
   <footer>
     <p>Team 5 | Berkeley Coding Bootcamp</p>
   </footer>
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
-  <!-- <script>
+  <script>
     $('#format').foundation();
-  </script> -->
-  <script type='text/javascript' src=./assets/js/particles.js></script>
-  <script type='text/javascript' src=./assets/js/app.js></script>
+  </script>
   <script src=./assets/js/script.js></script>
+  <script src=./particles.js></script>
+  <script src=./script.js></script>
 </body>
 
 </html>
