--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EzVibez | Find lyrics, mood, and recommendations</title>
     <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
   </head>
   <body>
 
@@ -25,10 +25,10 @@
         <h1>EzVibez</h1> <!--LOGO-->
         <p class="lead">Search for a song to get its lyrics and mood</p>
         <div class="input-group input-group-rounded">
-            <input class="input-group-field" type="search">
-            <div class="input-group-button">
-                <input type="submit" class="button secondary" value="Search">
-            </div>
+          <form id="form"  autocomplete="off">
+            <input type="text" id="search"  placeholder="Search artist or song">
+            <button>Search</button>
+          <form>
           </div>          
       </div>
     </div>
@@ -56,28 +56,28 @@
 
     <div class="row medium-up-3 large-up-4" id="recs"> <!--8 recommendations add this dynamically in js-->
       <div class="column">
-        <img class="thumbnail" src="https://placehold.it/550x550">
+        <!-- <img class="thumbnail" src="https://placehold.it/550x550"> -->
       </div>
       <div class="column">
-        <img class="thumbnail" src="https://placehold.it/550x550">
+        <!-- <img class="thumbnail" src="https://placehold.it/550x550"> -->
       </div>
       <div class="column">
-        <img class="thumbnail" src="https://placehold.it/550x550">
+        <!-- <img class="thumbnail" src="https://placehold.it/550x550"> -->
       </div>
       <div class="column">
-        <img class="thumbnail" src="https://placehold.it/550x550">
+        <!-- <img class="thumbnail" src="https://placehold.it/550x550"> -->
       </div>
       <div class="column">
-        <img class="thumbnail" src="https://placehold.it/550x550">
+        <!-- <img class="thumbnail" src="https://placehold.it/550x550"> -->
       </div>
       <div class="column">
-        <img class="thumbnail" src="https://placehold.it/550x550">
+        <!-- <img class="thumbnail" src="https://placehold.it/550x550"> -->
       </div>
       <div class="column">
-        <img class="thumbnail" src="https://placehold.it/550x550">
+        <!-- <img class="thumbnail" src="https://placehold.it/550x550"> -->
       </div>
       <div class="column">
-        <img class="thumbnail" src="https://placehold.it/550x550">
+        <!-- <img class="thumbnail" src="https://placehold.it/550x550"> -->
       </div>
     </div>
 
@@ -87,13 +87,13 @@
         <div class="row columns flex-container align-justify">
            <p>Team 5 | Berkeley Coding Bootcamp</p>
         </div>
-    </footer>
+      </footer>
 
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
     <script>
       $(document).foundation();
     </script>
-    <script src = ./assets/script.js></script>
+    <script src = ./assets/js/script.js></script>
   </body>
 </html>
