added a div for lyrics

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row container" id="result">
       <div class="medium-4 columns medium-pull-6">
         <h2>Lyrics</h2>
-        <p id="lyrics">Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam porttitor mauris, quis sollicitudin sapien justo in libero. Vestibulum mollis mauris enim. Morbi euismod magna ac lorem rutrum elementum. Donec viverra auctor.</p>
+        <p id="lyrics">Enter Song or Artist in the field above</p>
       </div>
     </div>
 
