--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>EzVibez | Find lyrics, mood, and recommendations</title>
     <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <script src = ./app.js></script>
+    <script src = ./particles.js></script>
   </head>
   <body>
-
+    <div class="particles-js">
     <!-- Start Top Bar -->
     <div class="top-bar">
       <div class="top-bar-left">
@@ -16,6 +18,7 @@
           <li class="menu-text">EzVibez</li> <!--LOGO-->
         </ul>
       </div>
+    </div>
     </div>
     <!-- End Top Bar -->
 
