--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <title>EzVibez | Find lyrics, mood, and recommendations</title>
     <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <script src = ./app.js></script>
-    <script src = ./particles.js></script>
+   
   </head>
   <body>
-    <div class="particles-js">
+    <div id="particles-js"></div>
     <!-- Start Top Bar -->
     <div class="top-bar">
       <div class="top-bar-left">
@@ -19,7 +18,7 @@
         </ul>
       </div>
     </div>
-    </div>
+  
     <!-- End Top Bar -->
 
     <div class="callout large">
@@ -97,6 +96,9 @@
     <script>
       $(document).foundation();
     </script>
+     <script src = ./app.js></script>
+     <script src = ./particles.js></script>
     <script src = ./assets/js/script.js></script>
+    <script src = particles.min.js></script>
   </body>
 </html>
