in html added a history button and styled it in css

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
           <li class="menu-text">EzVibez</li> <!--LOGO-->
         </ul>
       </div>
+      <div class="top-bar-right">
+        <button id="historyBtn">History</button>
+      </div>
     </div>
     <!-- End Top Bar -->
 
@@ -27,7 +30,7 @@
         <div class="input-group input-group-rounded">
           <form id="form"  autocomplete="off">
             <input type="text" id="search"  placeholder="Search artist or song">
-            <button>Search</button>
+            <button id="searchBtn">Search</button>
           <form>
           </div>          
       </div>
