particle location correct, js not interactive

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    
   </head>
   <body>
-    <div id="particles-js"></div>
+   
     <!-- Start Top Bar -->
     <div class="top-bar">
       <div class="top-bar-left">
@@ -99,6 +99,6 @@
      <script src = ./app.js></script>
      <script src = ./particles.js></script>
     <script src = ./assets/js/script.js></script>
-    <script src = particles.min.js></script>
+    <script src = ./particles.min.js></script>
   </body>
 </html>
