added model properties within js and styled it in css

--- a/index.html
+++ b/index.html
@@ -18,9 +18,17 @@
         </ul>
       </div>
       <div class="top-bar-right">
-        <button id="historyBtn">History</button>
+        <button id="myBtn">History</button>
+        <!-- The Modal -->
+        <div id="myModal" class="modal">
+        <!-- Modal content -->
+        <div class="modal-content">
+          <span class="close">&times</span>
+          <p> </p>
+        </div>
+        </div>
       </div>
-    </div>
+  </div>
     <!-- End Top Bar -->
 
     <div class="callout large">
@@ -95,9 +103,7 @@
 
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
-    <script>
-      $(document).foundation();
-    </script>
+ 
     <script src = ./assets/js/script.js></script>
   </body>
 </html>
