z postitioning for particles

--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
     <title>EzVibez | Find lyrics, mood, and recommendations</title>
     <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/particle.css">
   </head>
   <body>
-
+    <div id="particles-js"></div>
     <!-- Start Top Bar -->
     <div class="top-bar">
       <div class="top-bar-left">
         <ul class="menu">
           <li class="menu-text">EzVibez</li> <!--LOGO-->
         </ul>
-      </div>
+      
+    </div>
       <div class="top-bar-right">
         <button id="myBtn">History</button>
         <!-- The Modal -->
@@ -104,5 +106,7 @@
     <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
  
     <script src = ./assets/js/script.js></script>
+    <script src = ./assets/js/app.js></script>
+    <script src = ./assets/js/particles.js></script>
   </body>
 </html>
