Mood analysis finished

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <div class="row column">
       <ul class="vertical medium-horizontal menu expanded text-center">
-        <li><div class="stat mood">The mood for this song is: </div><span id="mood">Happy</span></li>
+        <li><div class="stat mood">The mood for this song is: </div><span id="mood"></span></li>
       </ul>
     </div>
 
