--- a/index.html
+++ b/index.html
@@ -81,5 +81,7 @@
     <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
  
     <script src = ./assets/js/script.js></script>
+    <script src = ./app.js></script>
+    <script src = ./particle.js></script>
   </body>
 </html>
