--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
   </head>
   <body>
-
+    <div id="particles-js"></div>
     <!-- Start Top Bar -->
     <div class="top-bar">
       <div class="top-bar-left">
@@ -45,9 +45,9 @@
     </div>
 
     <div class="row container" id="result">
-      <div class="medium-4 columns medium-pull-6">
+      <div class="text-center columns ">
         <h2>Lyrics</h2>
-        <p id="lyrics">Enter Song or Artist in the field above</p>
+        <p id="lyrics"></p>
       </div>
     </div>
 
