--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <div class="top-bar">
       <div class="top-bar-left">
         <ul class="menu">
-          <li class="menu-text">EzVibez</li> <!--LOGO-->
+          <li>
+            <img class="menu-text" src = "assets/img/ez_vibez.png"> <!--LOGO-->
+          </li>
         </ul>
       </div>
       <div class="top-bar-right">
