--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="./assets/css/style.css">
   </head>
   <body>
+    <div id="particles-js"></div>
 
+    <!-- stats - count particles -->
+    <div class="count-particles">
+      <span class="js-count-particles">--</span> particles
+    </div>
     <!-- Start Top Bar -->
     <div class="top-bar">
       <div class="top-bar-left">
@@ -79,6 +84,8 @@
 
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
+    <script src = ./particles.js></script>
+<script src = ./app.js></script>
  
     <script src = ./assets/js/script.js></script>
   </body>
