adding temporary changes

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="./assets/css/style.css">
   </head>
   <body>
-    <div id="particles-js"></div>
+    <!-- <div id="particles-js"></div> -->
     <!-- Start Top Bar -->
     <div class="top-bar">
       <div class="top-bar-left">
         <ul class="menu">
           <li>
-            <img class="menu-text" src = "assets/img/ez_vibez.png"> <!--LOGO-->
+            <!-- <img class="menu-text" src = "assets/img/ez_vibez.png"> LOGO -->
           </li>
         </ul>
       </div>
@@ -84,7 +84,7 @@
     <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
  
     <script src = ./assets/js/script.js></script>
-    <script src = ./app.js></script>
-    <script src = ./particle.js></script>
+    <!-- <script src = ./app.js></script> -->
+    <!-- <script src = ./particle.js></script> -->
   </body>
 </html>
