--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="top-bar-left">
         <ul class="menu">
           <li>
-            <!-- <img class="menu-text" src = "assets/img/ez_vibez.png"> LOGO -->
+            <img class="menu-text" src = "assets/img/ez_vibez.png">
           </li>
         </ul>
       </div>
